# beam-FEM

./: .gitignore  README.md  pyproject.toml
examples/beam/: example1.py
examples/beam/example1/: example1.py
examples/beam/example2/: example2.py
examples/beam/example3/: example3.py
src/beam/: __init__.py  element.py  node.py  system.py
