[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beam-FEM"
version = "1.0.0"
description = "Beam - FEM"
authors = [
    { name = "Bruno Teixeira Santos", email = "bruno.if@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "sympy",
 
]

[tool.setuptools.packages.find]
where = ["src"]